--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name="sparkfun_opt4048_tristimulus_color_sensor"
+name = "sparkfun_opt4048_tristimulus_color_sensor"
 version="1.0.0"
 description="SparkFun Electronics Tristiumulus Color Sensor - OPT4048"
 url="https://www.sparkfun.com/products/22638"
@@ -33,4 +33,5 @@ classifiers=[
 keywords=["electronics", "maker", "sensing"]
 
 [tool.setuptools]
-py-modules=["qwiic_opt4048", "opt4048_registers"]
+# py-modules=["qwiic_opt4048", "opt4048_registers"] # Circup gets upset if there are multiple modules...
+packages = ["qwiic_opt4048"]
